--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <img src="img/services/services-1.png" alt="">
                         <h4>Реставрация дверей и мебели</h4>
                         <p>Выполняю реставрацию у вас на дому. Восстановление проходит аккуратно, чтобы достичь идеального результата. Полирую мебель долговечным покрытием.</p>
-                        <h4 style='font-size:15px'>Цена за услугу: NN</h4>
+                        <h4 style='font-size:15px'>Цена за услугу: от 3000₽</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -202,7 +202,7 @@
                         <img src="img/services/services-2.png" alt="">
                         <h4>Устранение дефектов</h4>
                         <p>Занимаюсь устранением осколов, трещин, выбоен потёртостей. Восстановление недостающих фрагментов шпона и древесины.</p>
-                        <h4 style='font-size:15px'>Цена за услугу: NN</h4>
+                        <h4 style='font-size:15px'>Цена за услугу: от 3000₽</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -210,7 +210,7 @@
                         <img src="img/services/services-3.png" alt="">
                         <h4>Качество</h4>
                         <p>Я использую качественные и проверенные материалы и инструменты, чтобы результат был долговечным.</p>
-                        <h4 style='font-size:15px'>Цена за услугу: NN</h4>
+                        <h4 style='font-size:15px'>Цена за услугу: от 3000₽</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
@@ -326,7 +326,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
                         <div class="footer__top__text">
-                            <h2>Хотите проконсультироваться?</h2>
+                            <h2>ОСТАВЬТЕ ВАШ НОМЕР</h2>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
