--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
                         <div class="footer__top__text">
-                            <h2>Хотите проконсультироваться?</h2>
+                            <h2>пПРОКОНСУЛЬТИРОВАТЬ?</h2>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
