--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="services__item">
                         <img src="img/services/services-1.png" alt="">
                         <h4>Реставрация дверей и мебели</h4>
-                        <p>Выполняю реставрацию у вас на дому. Восстановление проходит аккуратно, чтобы достичь идеального результата. Полирую мебель долговечным покрытием.</p>
+                        <p>Выполняю реставрацию у вас на дому. Восстановление проходит аккуратно, чтобы достичь идеального результата.</p>
                         <h4 style='font-size:15px'>Цена за услугу: от 3000₽</h4>
                     </div>
                 </div>
