--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         <div class="footer__logo">
                             <a href="#" style='color:white;font-weight: bold;'>Реставрация дверей</a>
                         </div>
-                        <p>Россия, г. Томск <br />Выезд во все районы города</p>
+                        <p>Россия, г. Томск <br />Выезд в пригород</p>
                         <ul>
                             <li>door.tomsk@yandex.ru</li>
                             <li>+7 952 884-99-29</li>
