--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="contact__widget__item__text">
                             <h5>Местоположение</h5>
-                            <span>Томская область, г. Томск</span>
+                            <span>город Томск</span>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                         <div class="footer__logo">
                             <a href="#" style='color:white;font-weight: bold;'>Реставрация дверей</a>
                         </div>
-                        <p>Россия, г. Томск <br />Выезд во все районы города</p>
+                        <p>Россия, г. Томск <br />Выезд в пригород</p>
                         <ul>
                             <li>door.tomsk@yandex.ru</li>
                             <li>+7 952 884-99-29</li>
