--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="hero__slider owl-carousel">
             <div class="hero__items set-bg" data-setbg="img/hero/hero-1.jpg">
                 <div class="hero__text">
-                    <h2 style='font-size:50px;'>Безопасная реставрация дверей</h2>
+                    <h2 style='font-size:50px;'>Реставрация дверей и мебели</h2>
                     <a href="#" class="primary-btn">Проекты</a>
                     <a href="#" class="more_btn">Консультация</a>
                     <div class="hero__social">
@@ -209,7 +209,7 @@
                     <div class="services__item">
                         <img src="img/services/services-3.png" alt="">
                         <h4>Качество</h4>
-                        <p>Я использую качественные и проверенные материалы и инструменты, чтобы результат был долговечным.</p>
+                        <p>Я использую качественные и проверенные материалы. Предоставляется гарантия 1 месяц.</p>
                         <h4 style='font-size:15px'>Цена за услугу: от 3000₽</h4>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
                         <img src="img/services/services-4.png" alt="">
                         <h4>Выезд</h4>
                         <p>Я осуществляю выезд во все районы Томской области в любое удобное для вас время.</p>
-                        <h4 style='font-size:15px'>Бесплатно</h4>
+                        <h4 style='font-size:15px'>По договорённости</h4>
                     </div>
                 </div>
             </div>
