--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>Я – Лазорин Александр</span>
+                            <span>Я – Александр</span>
                             <h2>Мастер по реставрации дверей</h2>
                         </div>
                         <div class="about__para__text">
