--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <title>Реставрация дверей в городе Томске</title>
+    <meta name="description" content="Реставрация дверей в городе Томске, быстро и качественно." />
+    <meta name="keywords" content="Ремонт, ремонт дверей, Томск, покраска дверей, двери." />
+    <meta property='article:author' content='GiraffeWeb' />
+    <meta name="robots" content="index, follow" />
 
     <!-- Google Font GiraffeWeb -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
