--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <title>Реставрация дверей в городе Томске</title>
+    <meta name="description" content="Реставрация дверей в городе Томске, быстро и качественно." />
+    <meta name="keywords" content="Ремонт, ремонт дверей, Томск, покраска дверей, двери." />
+    <meta property='article:author' content='GiraffeWeb' />
+    <meta name="robots" content="index, follow" />
 
     <!-- Google Font GiraffeWeb -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -282,36 +286,72 @@
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Ирина Евгеньевна. Долго думала, как решить проблему с вмятиной в двери. Обратилась за помощью к Александру. Приехал быстро и справился успешно с задачей. Цена приемлемая, спасибо! Советую данного мастера.”</p>
+                                    <p>“Долго думала, как решить проблему с вмятиной в двери. Обратилась за помощью к Александру. Приехал быстро и справился успешно с задачей. Цена приемлемая, спасибо! Советую данного мастера.”</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Дмитрий Васильевич. Спасибо Александру за проделанную работу. У нас были следующие проблемы: скрипела дверь и нижний держатель был сломан. Александр быстро и четко выполнил свою задачу, всё починил. Радует, что не заняло много времени.”</p>
+                                    <p>“Спасибо Александру за проделанную работу. У нас были следующие проблемы: скрипела дверь и нижний держатель был сломан. Александр быстро и четко выполнил свою задачу, всё починил. Радует, что не заняло много времени.”</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Надежда Викторовна. Радует, что в городе присутствуют такие мастера. Я живу в районе Томской области, Александр приехал самостоятельно, что не может не радовать. Установил новые двери, покрыл специальным лаком. Очень качественная работа, советую!”</p>
+                                    <p>“Радует, что в городе присутствуют такие мастера. Я живу в районе Томской области, Александр приехал самостоятельно, что не может не радовать. Установил новые двери, покрыл специальным лаком. Очень качественная работа, советую!”</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Виктория Владимировна. Дверной проём отошёл, следовательно, с дверьми начали возникать трудности при открытии. Договорились с Александром. Приехал на дом и всё сделал. Данный мастер — залог качества.”</p>
+                                    <p>“Дверной проём отошёл, следовательно, с дверьми начали возникать трудности при открытии. Договорились с Александром. Приехал на дом и всё сделал. Данный мастер — залог качества.”</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
-            
+            <div class="row d-flex justify-content-center">
+                <div class="col-xl-6 col-lg-8 col-md-7 col-sm-10 ">
+                    <div class="testimonial__client">
+                        <div class="testimonial__client__item add">
+                            <div class="testimonial__client__pic">
+                            </div>
+                            <div class="testimonial__client__text">
+                                <h5>Ирина Евгеньевна</h5>
+                                <span>Заказчик</span>
+                            </div>
+                        </div>
+                        <div class="testimonial__client__item">
+                            <div class="testimonial__client__pic">
+                            </div>
+                            <div class="testimonial__client__text">
+                                <h5>Дмитрий Васильевич</h5>
+                                <span>Заказчик</span>
+                            </div>
+                        </div>
+                        <div class="testimonial__client__item">
+                            <div class="testimonial__client__pic">
+                            </div>
+                            <div class="testimonial__client__text">
+                                <h5>Надежда Викторовна</h5>
+                                <span>Заказчик</span>
+                            </div>
+                        </div>
+                        <div class="testimonial__client__item">
+                            <div class="testimonial__client__pic">
+                            </div>
+                            <div class="testimonial__client__text">
+                                <h5>Виктория Владимировна</h5>
+                                <span>Заказчик</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -341,7 +381,7 @@
                         <div class="footer__logo">
                             <a href="#" style='color:white;font-weight: bold;'>Реставрация дверей</a>
                         </div>
-                        <p>Россия, г. Томск <br />Выезд в пригород</p>
+                        <p>Россия, г. Томск <br />Осуществляется выезд в пригород</p>
                         <ul>
                             <li>door.tomsk@yandex.ru</li>
                             <li>+7 952 884-99-29</li>
