--- a/contact.html
+++ b/contact.html
@@ -183,7 +183,7 @@
                         <div class="footer__logo">
                             <a href="#" style='color:white;font-weight: bold;'>Реставрация дверей</a>
                         </div>
-                        <p>Россия, г. Томск <br />Выезд в пригород</p>
+                        <p>Россия, г. Томск <br />Осуществляется выезд в пригород</p>
                         <ul>
                             <li>door.tomsk@yandex.ru</li>
                             <li>+7 952 884-99-29</li>
