--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -63,7 +61,7 @@
                             <li><a href="#about">О нас</a></li>
                             <li><a href="#projects">Наши работы</a></li>
                             <li><a href="#services">Услуги</a></li>
-                            <li><a class="active" href="contact.html">Связаться</a></li>
+                            <li class="active"><a href="contact.html">Связаться</a></li>
                         </ul>
                     </nav>
                 </div>
