--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -59,7 +57,7 @@
                 <div class="col-lg-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a class="active" href="index.html">Главная</a></li>
+                            <li class="active"><a href="index.html">Главная</a></li>
                             <li><a href="index.html#about">О нас</a></li>
                             <li><a href="index.html#projects">Наши работы</a></li>
                             <li><a href="index.html#services">Услуги</a></li>
