--- a/index.html
+++ b/index.html
@@ -284,28 +284,28 @@
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Долго думала, как решить проблему с вмятиной в двери. Обратилась за помощью к Александру. Приехал быстро и справился успешно с задачей. Цена приемлемая, спасибо! Советую данного мастера.”</p>
+                                    <p>“Ирина Евгеньевна. Долго думала, как решить проблему с вмятиной в двери. Обратилась за помощью к Александру. Приехал быстро и справился успешно с задачей. Цена приемлемая, спасибо! Советую данного мастера.”</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Спасибо Александру за проделанную работу. У нас были следующие проблемы: скрипела дверь и нижний держатель был сломан. Александр быстро и четко выполнил свою задачу, всё починил. Радует, что не заняло много времени.”</p>
+                                    <p>“Дмитрий Васильевич. Спасибо Александру за проделанную работу. У нас были следующие проблемы: скрипела дверь и нижний держатель был сломан. Александр быстро и четко выполнил свою задачу, всё починил. Радует, что не заняло много времени.”</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Радует, что в городе присутствуют такие мастера. Я живу в районе Томской области, Александр приехал самостоятельно, что не может не радовать. Установил новые двери, покрыл специальным лаком. Очень качественная работа, советую!”</p>
+                                    <p>“Надежда Викторовна. Радует, что в городе присутствуют такие мастера. Я живу в районе Томской области, Александр приехал самостоятельно, что не может не радовать. Установил новые двери, покрыл специальным лаком. Очень качественная работа, советую!”</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Дверной проём отошёл, следовательно, с дверьми начали возникать трудности при открытии. Договорились с Александром. Приехал на дом и всё сделал. Данный мастер — залог качества.”</p>
+                                    <p>“Виктория Владимировна. Дверной проём отошёл, следовательно, с дверьми начали возникать трудности при открытии. Договорились с Александром. Приехал на дом и всё сделал. Данный мастер — залог качества.”</p>
                                 </div>
                             </div>
                         </div>
@@ -319,32 +319,24 @@
                             <div class="testimonial__client__pic">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Ирина Евгеньевна</h5>
-                                <span>Заказчик</span>
                             </div>
                         </div>
                         <div class="testimonial__client__item">
                             <div class="testimonial__client__pic">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Дмитрий Васильевич</h5>
-                                <span>Заказчик</span>
                             </div>
                         </div>
                         <div class="testimonial__client__item">
                             <div class="testimonial__client__pic">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Надежда Викторовна</h5>
-                                <span>Заказчик</span>
                             </div>
                         </div>
                         <div class="testimonial__client__item">
                             <div class="testimonial__client__pic">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Виктория Владимировна</h5>
-                                <span>Заказчик</span>
                             </div>
                         </div>
                     </div>
