--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                         <div class="copyright__text">
                             <p> © <script>
                                 document.write(new Date().getFullYear());
-                            </script> Все права защищены | Веб-студия <a href="https://giraffeweb.ru"
+                            </script> Все права защищены | Веб-студия <i class="ti-heart" aria-hidden="true"></i> <a href="https://giraffeweb.ru"
                             target="_blank">GiraffeWeb</a>
                         </p>
                     </div>
