--- a/contact.html
+++ b/contact.html
@@ -225,7 +225,8 @@
                         <div class="copyright__text">
                             <p> © <script>
                                 document.write(new Date().getFullYear());
-                            </script> Все права защищены | Веб-студия <i class="ti-heart" aria-hidden="true"></i> <a href="https://giraffeweb.ru"
+                            </script> Все права защищены | Веб-студия <i class="fa fa-heart-o"
+                            aria-hidden="true"></i> <a href="https://giraffeweb.ru"
                             target="_blank">GiraffeWeb</a>
                         </p>
                     </div>
