--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer__top__newslatter">
                             <form action="https://formspree.io/meqeedad" method="POST">
-                                <input type="text" placeholder="Оставьте ваш номер" name='phone_main' style='border-radius: 15px;'>
+                                <input type="text" placeholder="+7 (___) ___ __ __" name='phone_main' style='border-radius: 15px;'>
                                 <button type="submit" style='border-radius: 0 15px 0 15px;'><i class="fa fa-send"></i></button>
                             </form>
                         </div>
