--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="services__item">
                         <img src="img/services/services-4.png" alt="">
                         <h4>Выезд</h4>
-                        <p>Я осуществляю выезд в пригород г. Томска в любое удобное для вас время.</p>
+                        <p>Я осуществляю выезд в пригород города Томска в любое удобное для вас время.</p>
                         <h4 style='font-size:15px'>По договорённости</h4>
                     </div>
                 </div>
