--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="services__item">
                         <img src="img/services/services-2.png" alt="">
                         <h4>Устранение дефектов</h4>
-                        <p>Занимаюсь устранением осколов, трещин, выбоен потёртостей. Восстановление недостающих фрагментов шпона и древесины.</p>
+                        <p>Занимаюсь устранением осколов, трещин, выбоен потёртостей. Восстановление недостающих фрагментов шпона и древесины. Ремонт ламината.</p>
                         <h4 style='font-size:15px'>Цена за услугу: от 3000₽</h4>
                     </div>
                 </div>
