--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/87298163" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<meta name="yandex-verification" content="b02f221685d76b47" />
 </head>
 
 <body>
